# cuda-pt

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .typos.toml  CMakeLists.txt  CMakeListsa.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  dependencies.txt  nvcc_test.cu  python_test.py  rm_devlink_obj.sh  test.sh
.github/workflows/: linux-build-on-pr.yml  stale.yml
app/: depth_renderer.cu  pt_renderer.cu  sphere_pt.cu  viewer.cu
optix_test/: CMakeLists.txt  main.cpp
scene/: cbox.xml
scene/meshes/: .gitignore  readout.py
scene/xml/: balls-mono.xml  balls.xml  bunny.xml  cbox-point.xml  cornell-box.xml  diamonds.xml  env-balls.xml  grid-cbox.xml  kitchen.xml  malorian.xml  medium-cbox.xml  point.xml  rich-cars.xml  sports-cars.xml  tof-rendering.xml  vader.xml  water.xml  whiskey.xml
scripts/: .gitignore  cpt_py_test.py  csv_read.py  ddp_render.py  serial_render.py  shape_auto_read.py  valid_ray_ratio.py  video.py
scripts/codestyle/: clang-tidy.py  clang_format.py  copyright.py  cpplint_pre_commit.py
scripts/configs/: run.conf  serial.conf  vader.conf
src/: basic_pt.cu
src/bsdf/: bsdf.cuh  bsdf_registry.cuh  dispersion.cuh  forward.cuh  fresnel.cuh  ggx_conductor.cuh  lambert.cuh  plastic.cuh  specular.cuh  translucent.cuh
src/bvh/: bvh.cc  bvh.cu  bvh.cuh  bvh.h
src/core/: aabb.cuh  aos.cuh  bsdf.cuh  bvh.cuh  bvh_opt.cuh  bvh_spatial.cuh  camera_model.cuh  color_map.cuh  config.cuh  config.h  constants.cuh  cuda_utils.cuh  defines.cuh  dynamic_bsdf.cuh  emitter.cuh  enums.cuh  fresnel.cuh  host_device.cuh  imgui_utils.cuh  interaction.cuh  max_depth.h  medium.cuh  metal_params.cuh  object.cuh  parse_obj.cuh  phase.cuh  preset_params.cuh  primitives.cuh  proc_geometry.cuh  progress.h  quaternion.cuh  ray.cuh  sampler.cuh  sampling.cuh  scene.cuh  serialize.h  shapes.cuh  so3.cuh  soa.cuh  stats.h  (+10 more)
src/ext/: CMakeLists.txt
src/impl/: base_pt.cu  bsdf.cu  bsdf_dispersion.cu  bsdf_ggx.cu  bsdf_plastic.cu  bvh.cu  bvh_opt.cu  bvh_spatial.cu  camera_model.cu  color_map.cu  config.cpp  dynamic_bsdf.cu  emitter.cu  imgui_utils.cu  medium.cu  medium_registry.cu  megakernel_pt.cu  object.cu  parse_obj.cu  phase_registry.cu  proc_geometry.cu  progress.cpp  scene.cu  spatial_splitter.cu  stats.cc  textures.cu  virtual_funcs.cu  vol_grid.cu  vol_homo.cu  wavefront_pt.cu  xyz.cu
src/optix/: optix_utils.cuh  pt_state.cuh  sbt.cuh
src/optix_impl/: optix_utils.cu  shaders.cu
src/pt_impl/: bvh_cost.cu  depth.cu  light_tracer.cu  megakernel_lt.cu  megakernel_pt.cu  megakernel_vpt.cu  megapt_optix.cu  optix_pt_kernel.cu  path_tracer.cu  volume_pt.cu  wavefront_pt.cu  wf_path_tracer.cu
src/pyrender/: python_bind.cu  python_render.cu  python_render.cuh
src/renderer/: base_pt.cuh  bvh_cost.cuh  depth.cuh  light_tracer.cuh  megakernel_pt.cuh  megakernel_vpt.cuh  megapt_optix.cuh  optix_pt_kernel.cuh  path_tracer.cuh  scheduler.cuh  tracer_base.cuh  tracing_func.cuh  volume_pt.cuh  wavefront_pt.cuh  wf_path_tracer.cuh  wfs_path_tracer.cuh
src/useless/: sphere_base.cuh
src/utils/: thread_pool.hpp
src/viewer_impl/: imgui_utils.cu
src/volume/: grid.cuh  henyey_greenstein.cuh  homogeneous.cuh  medium_registry.cuh  phase_registry.cuh  rayleigh.cuh  sggx.cuh
test/: depth_renderer.cu  path_tracer_test.cu  test_so3.cu  variant_test.cu
test/parsers/: obj_parser.cu  sensor_parse.cc
tests/: compact_node.cc
